--- a/themes/pelican-elegant/templates/index.html
+++ b/themes/pelican-elegant/templates/index.html
@@ -1,20 +1,55 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}
 {{ super() }}
 {% endblock title %}
 
+{% block meta_tags_in_head %}
+{{ super() }}
+{% from '_includes/_defaults.html' import LANDING_PAGE_ABOUT with context %}
+{% if LANDING_PAGE_ABOUT and LANDING_PAGE_ABOUT.title %}
+<meta property="og:title" content="{{ LANDING_PAGE_ABOUT.title|e }}"/>
+<meta name="twitter:title" content="{{ LANDING_PAGE_ABOUT.title|e }}">
+{% else %}
+<meta property="og:title" content="{{ SITENAME|striptags|e }}"/>
+<meta name="twitter:title" content="{{ SITENAME|striptags|e }}">
+{% endif %}
+<meta property="og:url" content="{{ SITEURL }}" />
+{% from '_includes/_defaults.html' import SITE_DESCRIPTION with context %}
+{% if SITE_DESCRIPTION %}
+<meta property="og:description" content="{{SITE_DESCRIPTION|e}}" />
+<meta name="twitter:description" content="{{SITE_DESCRIPTION|e}}">
+{% endif %}
+<meta property="og:site_name" content="{{ SITENAME|striptags|e }}" />
+<meta property="og:article:author" content="{{ AUTHOR }}" />
+{% from '_includes/_defaults.html' import FEATURED_IMAGE with context %}
+{% if FEATURED_IMAGE %}
+<meta property="og:image" content="{{FEATURED_IMAGE}}" />
+<meta name="twitter:image" content="{{FEATURED_IMAGE}}" >
+{% endif %}
+{% endblock meta_tags_in_head %}
+
 {% block content %}
+{% from '_includes/_defaults.html' import LANDING_PAGE_ABOUT with context %}
+{% from '_includes/_defaults.html' import PROJECTS with context %}
 <div class="row-fluid">
     {% if LANDING_PAGE_ABOUT and LANDING_PAGE_ABOUT.title %}
-    <header class="page_header span12">
+    {% set css_class = 'span10 offset2' %}
+    {% if PROJECTS and LANDING_PAGE_ABOUT %}
+    {% set css_class = 'span12' %}
+    {% endif %}
+    <header class="page-header {{css_class}}">
     <h1><a href="{{ SITEURL }}">{{ LANDING_PAGE_ABOUT.title }}</a></h1>
     </header>
     {% endif %}
 
     <div class="row-fluid">
         {% if LANDING_PAGE_ABOUT and LANDING_PAGE_ABOUT.details %}
-        <div class="span8">
+        {% set css_class = 'span8 offset2' %}
+        {% if PROJECTS and LANDING_PAGE_ABOUT %}
+        {% set css_class = 'span8' %}
+        {% endif %}
+        <div class="{{css_class}}">
             <header>
             <h1 id="about-me">About me</h1>
             </header>
@@ -25,13 +60,18 @@
         {% endif %}
 
         {% if PROJECTS %}
-        <div class="span4">
+        {% set css_class = 'span8 offset2' %}
+        {% if PROJECTS and LANDING_PAGE_ABOUT %}
+        {% set css_class = 'span4' %}
+        {% endif %}
+        <div class="{{css_class}}">
             <header>
             <h1 id="my-projects">My Projects</h1>
+            </header>
             {% for project in PROJECTS %}
             <ul class="list-all-articles">
                 <li>
-                <a href="{{ project.url }}" title="{{ project.name }}">{{ project.name }}</a> <span class="proj_desc">{{ project.description }}</span>
+                <a href="{{ project.url }}" title="{{ project.name }}">{{ project.name }}</a> <span class="proj-desc">{{ project.description }}</span>
                 </li>
             </ul>
             {%endfor %}
@@ -40,24 +80,32 @@
     </div>
 
     {% if articles %}
+    {% set css_class = 'span8 offset2' %}
+    {% if articles and PROJECTS and LANDING_PAGE_ABOUT %}
+    {% set css_class = 'span12' %}
+    {% endif %}
     <div class="row-fluid">
-        <div class="span12">
+        <div class="{{css_class}}">
             <header>
             <h1 id="recent-posts">Recent Posts <a id="allposts" href="{{ SITEURL }}/archives.html">all posts</a></h1>
             </header>
+        <div class="recent-posts">
             {% for article in articles %}
-            {% if not RECENT_ARTICLES_COUNT %}
-            {% set RECENT_ARTICLES_COUNT = 10 %}
-            {% endif %}
+            {% from '_includes/_defaults.html' import RECENT_ARTICLES_COUNT with context %}
             {% if loop.index0 < RECENT_ARTICLES_COUNT %}
-            <ul class="list-all-articles">
-                <li>
-                <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a> 
+            <article>
+                <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a>
+                <section>
+                    posted in
+                <a href="{{ SITEURL }}/categories.html#{{ article.category.slug }}-ref">{{ article.category }}</a>
+                <div class="recent-posts-time">
                 <time pubdate="pubdate" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
-                </li>
-            </ul>
+                </div>
+                </section>
+            </article>
             {% endif %}
             {% endfor %}
+        </div>
         </div>
     </div>
     {% endif %}
